# deer

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  geometry.cc  geometry.h  main.cc  matrix.h  optics.h  renderer.cc  renderer.h  rgb.cc  rgb.h  scene.cc  scene.h  spectrum.cc  spectrum.h  transform.cc  transform.h  vector.h
src/file_formats/: tga.cc  tga.h
tests/: CMakeLists.txt  geometry.cc  matrix.cc  rgb.cc  scene.cc  spectrum.cc  transform.cc  vector.cc
tests/file_formats/: tga.cc
